# lib/db/src/schema/index.ts
@@ -1,2 +1,3 @@
 export * from "./users";
 export * from "./runs";
+export * from "./suggestions";
